[MO-173] added a multi codes support for the request